--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "buefy": "^0.8.15",
     "core-js": "^3.6.4",
+    "node-sass": "^4.13.1",
     "register-service-worker": "^1.7.1",
+    "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
+    "vue-headful": "^2.1.0",
     "vue-router": "^3.1.6"
   },
   "devDependencies": {
