--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-headful": "^2.1.0",
+    "vue-i18n": "^8.17.0",
     "vue-router": "^3.1.6"
   },
   "devDependencies": {
