--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "calma-webapp",
-  "version": "0.1.0",
+  "name": "Calma Nessa Hora",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
