--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Calma",
-  "version": "0.1.8",
+  "version": "0.1.10",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -10,12 +10,13 @@
   "dependencies": {
     "buefy": "^0.8.15",
     "core-js": "^3.6.4",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "register-service-worker": "^1.7.1",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-headful": "^2.1.0",
     "vue-i18n": "^8.17.0",
+    "vue-meta": "^2.3.3",
     "vue-router": "^3.1.6"
   },
   "devDependencies": {
